# flarumpy

./: .gitignore  CHANGELOG.md  Pipfile  README.md  mypy.ini  pyproject.toml
flarumpy/: __init__.py  flarum.py  utils.py
flarumpy/routes/: discussions.py  root.py  users.py
