[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "flarumpy"
author = "Nearata"
author-email = "williamdicicco@protonmail.com"
home-page = "https://github.com/nearata/flarumpy"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed"
]
description-file = "README.md"
requires = [
    "httpx ==0.17.1"
]
requires-python = ">=3.9"

[tool.flit.metadata.requires-extra]
test = [
    "black ==20.8b1",
    "mypy ==0.812",
    "isort ==5.8.0"
]

[tool.isort]
profile = "black"
